# cosmic-shot

./: .gitignore  CLAUDE.md  Cargo.toml  SPEC.md
.github/workflows/: release.yml
contrib/: cosmic-shot.desktop  install.sh
docs/superpowers/plans/: 2026-05-08-m1-capture-display.md  2026-05-09-m2-fullscreen-overlay.md  2026-05-09-m3-selection-rectangle.md  2026-05-09-m4-clipboard-save.md  2026-05-09-m5-global-shortcut.md  2026-05-10-delay-capture.md  2026-05-10-m6-cargo-deb-packaging.md  2026-05-10-output-formats.md
docs/superpowers/specs/: 2026-05-08-m1-capture-display-design.md  2026-05-09-m2-fullscreen-overlay-design.md  2026-05-09-m3-selection-rectangle-design.md  2026-05-09-m4-clipboard-save-design.md  2026-05-09-m5-global-shortcut-design.md  2026-05-10-delay-capture-design.md  2026-05-10-m6-cargo-deb-packaging-design.md  2026-05-10-m8-annotation-tools-design.md  2026-05-10-output-formats-design.md
src/: config.rs  lib.rs  main.rs  types.rs
src/capture/: mod.rs  screencopy.rs
src/export/: crop.rs  mod.rs
src/overlay/: mod.rs  selection.rs
tests/: capture_all_outputs.rs  cli.rs  overlay_smoke.rs
