[package]
name = "cosmic-shot"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Fast native screenshot tool for COSMIC DE"
license = "MIT"

[dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
smithay-client-toolkit = "0.19"
image = { version = "0.25", default-features = false, features = ["png"] }
iced = { version = "0.13.1", features = ["image", "canvas"] }
tokio = { version = "1", features = ["rt", "macros"] }
iced_layershell = { version = "0.13.7", default-features = false }
arboard = { version = "3", features = ["wayland-data-control"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
